zzz_deprecated/monitoring-system-networkpolicies/grafana-egress-world.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: grafana-egress-world
  namespace: monitoring-system
spec:
  endpointSelector:
    matchLabels:
      app: grafana
  egress:
    - toFQDNs:
        - matchName: api.telegram.org
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: snapshots.raintank.io
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: grafana.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
