zzz_deprecated/monitoring-system-networkpolicies/netpol-longhorn-egress.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-longhorn-egress
  namespace: monitoring-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      prometheus: prometheus-kube-prometheus-prometheus
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: longhorn-system
            app: longhorn-manager
      toPorts:
        - ports:
            - port: "9500"
